Fix Firefox overflow in scrolly stages

--- a/src/Scrollyteller/index.module.scss
+++ b/src/Scrollyteller/index.module.scss
@@ -1,6 +1,6 @@
 .base {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
 
